<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:contentDescription="@string/logo_sharity"
        android:src="@drawable/ic_sharity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_constraint_account_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:layout_editor_absoluteX="30dp">

        <Button
            android:id="@+id/button_make_reservation"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_reservation"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_my_details"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_details"
            app:layout_constraintTop_toBottomOf="@id/button_make_reservation" />

        <Button
            android:id="@+id/button_my_cars"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_cars"
            app:layout_constraintTop_toBottomOf="@id/button_my_details" />

        <Button
            android:id="@+id/button_my_reservations"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_reservations"
            app:layout_constraintTop_toBottomOf="@id/button_my_cars" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>