<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".CreateBankaccount"
    android:layout_margin="20dp">

    <ImageView
        android:id="@+id/logo_sharity"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_sharity"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/logo_sharity" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logo_sharity"
        android:text="@string/add_bankaccount"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_holder"
        style="@style/text_input_layout"
        android:hint="@string/account_name"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account_holder_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:maxLength="255"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iban"
        style="@style/text_input_layout"
        android:hint="@string/iban"
        app:layout_constraintTop_toBottomOf="@+id/account_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxBackgroundColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/iban_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            android:maxLength="255"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_image_license"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/iban">

        <ImageView
            android:id="@+id/image_license"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/image_license"
            android:src="@drawable/ic_no_image"
            app:layout_constraintEnd_toStartOf="@+id/button_image"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_image"
            style="@style/button"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="?attr/colorSecondary"
            android:drawableLeft="@drawable/ic_baseline_add_a_photo_24"
            android:drawableTint="@color/white"
            android:text="@string/camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_license"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_start_sharing"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_sharing"
        android:drawableLeft="@drawable/ic_baseline_car_rental_24"
        app:layout_constraintTop_toBottomOf="@id/add_image_license"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_back"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_chevron_left_24"
            android:text="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"/>






</androidx.constraintlayout.widget.ConstraintLayout>